# cpp_i_love_it

./: .clang-format  README.md  meson.build
include/: children.h  classical.h  education.h  education_history.h  education_science.h  educational.h  entertainment.h  folk.h  hardrock.h  linkedlist.h  music.h  news.h  pop.h  rock.h  show.h  softrock.h  sports.h  tvchannel.h
src/: children.cpp  classical.cpp  education.cpp  education_history.cpp  educational.cpp  educational_science.cpp  entertainment.cpp  folk.cpp  hardrock.cpp  main.cpp  music.cpp  news.cpp  pop.cpp  rock.cpp  show.cpp  softrock.cpp  sports.cpp  tvchannel.cpp
